Add k6 load test for patient portal